
SharpArch.Web
* /Areas/AreaRouteHelper.cs:  New class for supporting controller/view "areas"
* /Areas/AreaViewEngine.cs:  New class for replacing the default view engine for supporting use of areas

SharpArch.Web.Castle
* Added this library to house extension methods for Castle related to registering controllers and custom repositories

Northwind Solution
* Modified solution structure to reflect the following
   /MyProject - Contains MyProject.sln
      /app - Contains the core project layers.
         /MyProject.Controllers 
         /MyProject.Core 
         /MyProject.Data 
         /MyProject.Web 
      /lib - Contains the solution items for the deployable application. 
      /db - Contains database schema information; e.g., the result of scaffolding and/or NHibernate's schema export. 
      /docs - Project documents. 
      /logs - Output location for log files. 
      /tests 
         /MyProject.Tests 
      /tools 
         /build - Empty folder for housing build related stuff. 
         /lib - Contains the solution items for the tests project and all other non-deployable assemblies. 
         /CrudScaffolding - Customizable CRUD, scaffolding generation code.
* Modified solution to accommodate controller/view "areas"; the change were numerous and should be reviewed within the patch associated with http://code.google.com/p/sharp-architecture/issues/detail?id=27
* Moved all employee related artifacts (controller, domain, views, etc.) under a namespace of "Organization" to show how areas are used

Northwind.Controllers
* Added a reference to Microsoft.Practices.ServiceLocation.dll
* RouteRegistrar.cs:  Registered map for "Root"; added ignore for favicon.ico

Northwind.Core
* Added a reference to Microsoft.Practices.ServiceLocation.dll

Northwind.Data
* Added a reference to Microsoft.Practices.ServiceLocation.dll

Northwind.Tests
* Moved project to /NorthwindSample/tests/Northwind.Tests