@@ -1,0 +1,47 @@
+﻿using System.Web.Mvc;
+using System.Text;
+using System.Web;
+using Newtonsoft.Json;
+using System;
+
+namespace SharpArch.Web.JsonNet
+{
+    /// <summary>
+    /// An ActionResult to return JSON from ASP.NET MVC to the browser using Json.NET.
+    /// Taken from http://james.newtonking.com/archive/2008/10/16/asp-net-mvc-and-json-net.aspx
+    /// </summary>
+    public class JsonNetResult : ActionResult
+    {
+        public Encoding ContentEncoding { get; set; }
+        public string ContentType { get; set; }
+        public object Data { get; set; }
+
+        public JsonSerializerSettings SerializerSettings { get; set; }
+        public Formatting Formatting { get; set; }
+
+        public JsonNetResult() {
+            SerializerSettings = new JsonSerializerSettings();
+        }
+
+        public override void ExecuteResult(ControllerContext context) {
+            if (context == null)
+                throw new ArgumentNullException("context");
+
+            HttpResponseBase response = context.HttpContext.Response;
+
+            response.ContentType = !string.IsNullOrEmpty(ContentType)
+              ? ContentType
+              : "application/json";
+
+            if (ContentEncoding != null)
+                response.ContentEncoding = ContentEncoding;
+
+            if (Data != null) {
+                JsonTextWriter writer = new JsonTextWriter(response.Output) { Formatting = Formatting };
+                JsonSerializer serializer = JsonSerializer.Create(SerializerSettings);
+                serializer.Serialize(writer, Data);
+                writer.Flush();
+            }
+        }
+    }
+}
