@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Solution Items\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate, Version=2.0.0.2001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Solution Items\NHibernate.dll</HintPath>
@@ -70,6 +74,7 @@
     </Compile>
     <Compile Include="Areas\AreaRouteHelper.cs" />
     <Compile Include="Areas\AreaViewEngine.cs" />
+    <Compile Include="JsonNet\JsonNetResult.cs" />
     <Compile Include="NHibernate\Validator\MvcValidationAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NHibernate\TransactionAttribute.cs" />
